assets/css/hoabean.css
@media only screen and (max-width: 800px) {
    .main {
        display: block;
        justify-items:center;
        align-items: center;

    }
    .inner {
        align-items: center;
        display: grid;
        justify-items: center;
    
    }
    img{
        max-width: 75%;
    }
    button {
        border-radius: 20px;
        padding: 1rem;
        height: 20rem;
        margin-bottom: 1cm;
        font-family: 'Roboto', sans-serif;
        font-size: 50px;
        background-color: #3b220f;
        color: white;
        margin: 8rem;
        border: none;
    
    }
    
}

@media only screen and (min-width: 1000px) {
    .main {
        display: flex;
    }
    .inner {
        width: 50%;
        align-items: center;
        display: grid;
        justify-items: center;
    
    }
    img{
        max-width: 50%;
    }
    p {
        max-width: 45%;
    }
}





body {
    background: #FFF4E4;
    font-family: 'Roboto', sans-serif;
}

p {
    font-size: 24px;
    color: #3b220f;
}

a {
    font-style: none;
    text-decoration: none;
    font-family: 'Roboto', sans-serif;
    font-size: 24px;
    color: #3b220f;

}

a:hover {
    cursor: pointer;
    color: #954d0e;

}

button {
    border-radius: 20px;
    padding: 1rem;
    font-family: 'Roboto', sans-serif;
    font-size: 24px;
    background-color: #3b220f;
    color: white;
    margin-bottom: 5rem;
    border: none;

}

button:hover {
    cursor: pointer;
    background-color: #954d0e;
    color: white;
}

